Added , test cases functionilty
